Replace Paths.get() with Path.of()